cloudformation/template.yml
Resources:
  PrivateIntegrationsTutorialVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC
  PrivateIntegrationsTutorialVPCPublicSubnet1Subnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      CidrBlock: 10.0.0.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: "aws-cdk:subnet-name"
          Value: Public
        - Key: "aws-cdk:subnet-type"
          Value: Public
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet1
  PrivateIntegrationsTutorialVPCPublicSubnet1RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPC
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet1
  PrivateIntegrationsTutorialVPCPublicSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1RouteTable
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1Subnet
  PrivateIntegrationsTutorialVPCPublicSubnet1DefaultRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref PrivateIntegrationsTutorialVPC
    DependsOn:
      - PrivateIntegrationsTutorialVPCVPCGW
  PrivateIntegrationsTutorialVPCPublicSubnet1:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet1
  PrivateIntegrationsTutorialVPCPublicSubnet1NATGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1Subnet
      AllocationId: !GetAtt
        - PrivateIntegrationsTutorialVPCPublicSubnet1
        - AllocationId
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet1
  PrivateIntegrationsTutorialVPCPublicSubnet2Subnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      CidrBlock: 10.0.64.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: "aws-cdk:subnet-name"
          Value: Public
        - Key: "aws-cdk:subnet-type"
          Value: Public
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet2
  PrivateIntegrationsTutorialVPCPublicSubnet2RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPC
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet2
  PrivateIntegrationsTutorialVPCPublicSubnet2RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2RouteTable
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2Subnet2
  PrivateIntegrationsTutorialVPCPublicSubnet2DefaultRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref PrivateIntegrationsTutorialVPC
    DependsOn:
      - PrivateIntegrationsTutorialVPCVPCGW
  PrivateIntegrationsTutorialVPCPublicSubnet2:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet2
  PrivateIntegrationsTutorialVPCPublicSubnet2NATGateway:
    Type: "AWS::EC2::NatGateway"
    Properties:
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2Subnet2
      AllocationId: !GetAtt
        - PrivateIntegrationsTutorialVPCPublicSubnet2
        - AllocationId
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PublicSubnet2
  PrivateIntegrationsTutorialVPCPrivateSubnet1Subnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      CidrBlock: 10.0.128.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: "aws-cdk:subnet-name"
          Value: Private
        - Key: "aws-cdk:subnet-type"
          Value: Private
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PrivateSubnet1
  PrivateIntegrationsTutorialVPCPrivateSubnet1RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPC
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PrivateSubnet1
  PrivateIntegrationsTutorialVPCPrivateSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1RouteTable
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1Subnet
  PrivateIntegrationsTutorialVPCPrivateSubnet1DefaultRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet1NATGateway
  PrivateIntegrationsTutorialVPCPrivateSubnet2Subnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPC
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      CidrBlock: 10.0.192.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: "aws-cdk:subnet-name"
          Value: Private
        - Key: "aws-cdk:subnet-type"
          Value: Private
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PrivateSubnet2
  PrivateIntegrationsTutorialVPCPrivateSubnet2RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPC
      Tags:
        - Key: Name
          Value: >-
            PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC/PrivateSubnet2
  PrivateIntegrationsTutorialVPCPrivateSubnet2RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2RouteTable
      SubnetId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2Subnet
  PrivateIntegrationsTutorialVPCPrivateSubnet2DefaultRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref PrivateIntegrationsTutorialVPCPublicSubnet2NATGateway
  PrivateIntegrationsTutorialVPC:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: PrivateIntegrationsStack/PrivateIntegrationsTutorialVPC
  PrivateIntegrationsTutorialVPCVPCGW:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref PrivateIntegrationsTutorialVPC
      InternetGatewayId: !Ref PrivateIntegrationsTutorialVPC
  PrivateIntegrationsTutorialCluster:
    Type: "AWS::ECS::Cluster"
  PrivateIntegrationsTutorialService:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Scheme: internal
      SecurityGroups:
        - !GetAtt
          - PrivateIntegrationsTutorialServiceLBSecurityGroup
          - GroupId
      Subnets:
        - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1Subnet
        - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2Subnet
      Type: application
  PrivateIntegrationsTutorialServiceLBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: >-
        Automatically created Security Group for ELB
        PrivateIntegrationsStackPrivateIntegrationsTutorialServiceLBCB8E0368
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId: !Ref PrivateIntegrationsTutorialVPC
  PrivateIntegrationsTutorialServiceLBSecurityGrouptoPrivateIntegrationsStackPrivateIntegrationsTutorialServiceSecurityGroup:
    Type: "AWS::EC2::SecurityGroupEgress"
    Properties:
      GroupId: !GetAtt
        - PrivateIntegrationsTutorialServiceLBSecurityGroup
        - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId: !GetAtt
        - PrivateIntegrationsTutorialServiceSecurityGroup
        - GroupId
      FromPort: 80
      ToPort: 80
  PrivateIntegrationsTutorialServiceLBPublicListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref PrivateIntegrationsTutorialServiceLBPublicListenerECSGroup
          Type: forward
      LoadBalancerArn: !Ref PrivateIntegrationsTutorialService
      Port: 80
      Protocol: HTTP
  PrivateIntegrationsTutorialServiceLBPublicListenerECSGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Port: 80
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: "false"
      TargetType: ip
      VpcId: !Ref PrivateIntegrationsTutorialVPC
  PrivateIntegrationsTutorialServiceTaskDefTaskRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
  PrivateIntegrationsTutorialServiceTaskDef:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image: "public.ecr.aws/ecs-sample-image/amazon-ecs-sample:latest"
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref PrivateIntegrationsTutorialServiceTaskDefwebLogGroup
              awslogs-stream-prefix: PrivateIntegrationsTutorialService
              awslogs-region: !Ref "AWS::Region"
          Name: web
          PortMappings:
            - ContainerPort: 80
              Protocol: tcp
      Cpu: "512"
      ExecutionRoleArn: !GetAtt
        - PrivateIntegrationsTutorialServiceTaskDefExecutionRole
        - Arn
      Family: >-
        PrivateIntegrationsStackPrivateIntegrationsTutorialServiceTaskDefB5E162FC
      Memory: "2048"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn: !GetAtt
        - PrivateIntegrationsTutorialServiceTaskDefTaskRole
        - Arn
  PrivateIntegrationsTutorialServiceTaskDefwebLogGroup:
    Type: "AWS::Logs::LogGroup"
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  PrivateIntegrationsTutorialServiceTaskDefExecutionRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: "sts:AssumeRole"
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
  PrivateIntegrationsTutorialServiceTaskDefExecutionRoleDefaultPolicy:
    Type: "AWS::IAM::Policy"
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - "logs:CreateLogStream"
              - "logs:PutLogEvents"
            Effect: Allow
            Resource: !GetAtt
              - PrivateIntegrationsTutorialServiceTaskDefwebLogGroup
              - Arn
        Version: 2012-10-17
      PolicyName: >-
        PrivateIntegrationsTutorialServiceTaskDefExecutionRoleDefaultPolicy
      Roles:
        - !Ref PrivateIntegrationsTutorialServiceTaskDefExecutionRole
  PrivateIntegrationsTutorialService:
    Type: "AWS::ECS::Service"
    Properties:
      Cluster: !Ref PrivateIntegrationsTutorialCluster
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 2
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: web
          ContainerPort: 80
          TargetGroupArn: !Ref PrivateIntegrationsTutorialServiceLBPublicListenerECSGroup
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !GetAtt
              - PrivateIntegrationsTutorialServiceSecurityGroup
              - GroupId
          Subnets:
            - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1Subnet
            - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2Subnet
      TaskDefinition: !Ref PrivateIntegrationsTutorialServiceTaskDef
    DependsOn:
      - PrivateIntegrationsTutorialServiceLBPublicListenerECSGroup
      - PrivateIntegrationsTutorialServiceLBPublicListener
  PrivateIntegrationsTutorialServiceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: >-
        PrivateIntegrationsStack/PrivateIntegrationsTutorialService/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId: !Ref PrivateIntegrationsTutorialVPC
  PrivateIntegrationsTutorialServiceSecurityGroupfromPrivateIntegrationsStackPrivateIntegrationsTutorialServiceLBSecurityGroup:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 80
      GroupId: !GetAtt
        - PrivateIntegrationsTutorialServiceSecurityGroup
        - GroupId
      SourceSecurityGroupId: !GetAtt
        - PrivateIntegrationsTutorialServiceLBSecurityGroup
        - GroupId
      ToPort: 80
  PrivateIntegrationsTutorialAPI:
    Type: "AWS::ApiGatewayV2::Api"
    Properties:
      Name: private-integrations-tutorial
      ProtocolType: HTTP
  PrivateIntegrationsTutorialAPIANYproxylistener:
    Type: "AWS::ApiGatewayV2::Integration"
    Properties:
      ApiId: !Ref PrivateIntegrationsTutorialAPI
      IntegrationType: HTTP_PROXY
      ConnectionId: !Ref PrivateIntegrationsTutorialAPIVpcLink
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref PrivateIntegrationsTutorialServiceLBPublicListener
      PayloadFormatVersion: "1.0"
  PrivateIntegrationsTutorialAPIANYproxy:
    Type: "AWS::ApiGatewayV2::Route"
    Properties:
      ApiId: !Ref PrivateIntegrationsTutorialAPI
      RouteKey: "ANY /{proxy+}"
      AuthorizationType: NONE
      Target: !Join
        - ""
        - - integrations/
          - !Ref PrivateIntegrationsTutorialAPIANYproxylistener
  PrivateIntegrationsTutorialAPIVpcLink:
    Type: "AWS::ApiGatewayV2::VpcLink"
    Properties:
      Name: PrivateIntegrationsStackPrivateIntegrationsTutorialAPIVpcLink
      SubnetIds:
        - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet1Subnet
        - !Ref PrivateIntegrationsTutorialVPCPrivateSubnet2Subnet
      SecurityGroupIds: []
  myLogGroup46524CAB:
    Type: "AWS::Logs::LogGroup"
    Properties:
      RetentionInDays: 731
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
  StageWithLogging:
    Type: "AWS::ApiGatewayV2::Stage"
    Properties:
      ApiId: !Ref PrivateIntegrationsTutorialAPI
      StageName: $default
      AccessLogSettings:
        DestinationArn: !GetAtt
          - myLogGroup46524CAB
          - Arn
        Format: >-
          $context.identity.sourceIp - - [$context.requestTime]
          "$context.httpMethod $context.routeKey $context.protocol"
          $context.status $context.responseLength $context.requestId
      AutoDeploy: true
Outputs:
  PrivateIntegrationsTutorialServiceLoadBalancerDNS:
    Value: !GetAtt
      - PrivateIntegrationsTutorialService
      - DNSName
  PrivateIntegrationsTutorialServiceServiceURL:
    Value: !Join
      - ""
      - - "http://"
        - !GetAtt
          - PrivateIntegrationsTutorialService
          - DNSName
  APIinvokeURL:
    Description: Your API's invoke URL
    Value: !GetAtt
      - PrivateIntegrationsTutorialAPI
      - ApiEndpoint
